# PHD-Shortlist-Builder

./: README.md
phd_shortlist_builder/: DECISIONS.md  pyproject.toml  requirements.txt  schema.md
phd_shortlist_builder/examples/: outcomes_sample.csv  sample_student_profile.json
phd_shortlist_builder/phd_shortlist/: __init__.py  builder.py  cli.py  config.py  countries.py  io.py  outcomes.py  quality.py  scoring.py  text.py  validate.py
phd_shortlist_builder/phd_shortlist/data_sources/: cache.py  openalex.py
phd_shortlist_builder/phd_shortlist/models/: schema.py
phd_shortlist_builder/sample_output/: sample_biomaterials_001.json
phd_shortlist_builder/tests/: test_outcomes.py  test_validation.py
